# lab2_ak

./: CMakeLists.txt  Makefile  README.md
